# qtpsd

./: .cmake.conf  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  requirements.txt
examples/psdwidget/psd2png/: CMakeLists.txt  main.cpp
examples/psdwriter/psdcreator/: CMakeLists.txt  canvas.cpp  canvas.h  layermodel.cpp  layermodel.h  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/figma2png/: CMakeLists.txt  main.cpp
src/apps/psdexporter/: CMakeLists.txt  exportdialog.cpp  exportdialog.h  exportdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  psdtreeitemmodel.cpp  psdtreeitemmodel.h  psdview.cpp  psdwidget.cpp  psdwidget.h  psdwidget.ui
src/plugins/: CMakeLists.txt
src/plugins/psdadditionallayerinformation/blnc/: blnc.cpp
src/plugins/psdadditionallayerinformation/brit/: brit.cpp
src/plugins/psdadditionallayerinformation/curv/: curv.cpp
src/plugins/psdadditionallayerinformation/expa/: expa.cpp
src/plugins/psdadditionallayerinformation/feid/: feid.cpp
src/plugins/psdadditionallayerinformation/fmsk/: fmsk.cpp
src/plugins/psdadditionallayerinformation/grdm/: grdm.cpp
src/plugins/psdadditionallayerinformation/hue2/: hue2.cpp
src/plugins/psdadditionallayerinformation/lclr/: lclr.cpp
src/plugins/psdadditionallayerinformation/levl/: levl.cpp
src/plugins/psdadditionallayerinformation/lfx2/: lfx2.cpp
src/plugins/psdadditionallayerinformation/lmsk/: CMakeLists.txt  lmsk.cpp
src/plugins/psdadditionallayerinformation/lnk_/: lnk_.cpp
src/plugins/psdadditionallayerinformation/lr16/: lr16.cpp
src/plugins/psdadditionallayerinformation/lrfx/: lrfx.cpp
src/plugins/psdadditionallayerinformation/lsct/: lsct.cpp
src/plugins/psdadditionallayerinformation/lsdk/: lsdk.cpp
src/plugins/psdadditionallayerinformation/luni/: luni.cpp
src/plugins/psdadditionallayerinformation/mixr/: mixr.cpp
src/plugins/psdadditionallayerinformation/none/: none.json
src/plugins/psdadditionallayerinformation/patt/: CMakeLists.txt  patt.cpp
src/plugins/psdadditionallayerinformation/phfl/: phfl.cpp
src/plugins/psdadditionallayerinformation/plld/: plld.cpp
src/plugins/psdadditionallayerinformation/qpointf/: qpointf.cpp
src/plugins/psdadditionallayerinformation/selc/: selc.cpp
src/plugins/psdadditionallayerinformation/shmd/: shmd.cpp
src/plugins/psdadditionallayerinformation/sold/: sold.cpp
src/plugins/psdadditionallayerinformation/tysh/: tysh.cpp
src/plugins/psdadditionallayerinformation/u16/: u16.cpp
src/plugins/psdadditionallayerinformation/u32/: u32.cpp
src/plugins/psdadditionallayerinformation/u8/: u8.cpp
src/plugins/psdadditionallayerinformation/v16descriptor/: v16descriptor.cpp
src/plugins/psdadditionallayerinformation/vmsk/: vmsk.cpp
src/plugins/psdadditionallayerinformation/vogk/: vogk.cpp
src/plugins/psdadditionallayerinformation/vscg/: vscg.cpp
src/plugins/psdadditionallayerinformation/vstk/: vstk.cpp
src/plugins/psdexporter/: CMakeLists.txt
src/plugins/psdexporter/figma/: CMakeLists.txt  figma.cpp  figma.json
src/plugins/psdexporter/flutter/: CMakeLists.txt  flutter.cpp
src/plugins/psdexporter/images/: images.cpp
src/plugins/psdexporter/json/: json.cpp
src/plugins/psdexporter/lvgl/: CMakeLists.txt  lvgl.cpp  lvgl.json
src/plugins/psdexporter/qtquick/: CMakeLists.txt  adjustment.frag  blend.frag  blend.frag.qsb  qtquick.cpp
src/plugins/psdexporter/reactnative/: CMakeLists.txt  reactnative.cpp  reactnative.json
src/plugins/psdexporter/slint/: CMakeLists.txt  slint.cpp
src/plugins/psdexporter/swiftui/: CMakeLists.txt  swiftui.cpp  swiftui.json
src/plugins/psdimporter/: CMakeLists.txt
src/plugins/psdimporter/figma/: CMakeLists.txt  fig_archive.cpp  fig_archive.h  fig_kiwi.cpp  fig_kiwi.h  fig_to_rest.cpp  figma.cpp  (+1 more)
src/psdcore/: CMakeLists.txt  qpsdabstractimage.cpp  qpsdabstractimage.h  qpsdabstractplugin.h  qpsdabstractplugin_linux.cpp  qpsdabstractplugin_mac.cpp  qpsdadditionallayerinformation.cpp  qpsdadditionallayerinformationplugin.h  qpsdblend.cpp  qpsdblend.h  qpsdchannelimagedata.cpp  qpsdchannelimagedata.h  qpsdchannelinfo.cpp  qpsdchannelinfo.h  qpsdcolormodedata.cpp  qpsdcolormodedata.h  qpsddescriptor.cpp  qpsddescriptor.h  qpsddescriptorplugin.h  qpsdeffectslayer.cpp  qpsdeffectslayer.h  qpsdenginedataparser.cpp  qpsdenginedataparser.h  qpsdenum.cpp  qpsdenum.h  qpsdfileheader.cpp  qpsdfileheader.h  qpsdgloballayermaskinfo.cpp  qpsdgloballayermaskinfo.h  qpsdimagedata.cpp  qpsdimagedata.h  qpsdimageresourceblock.cpp  qpsdimageresourceblock.h  qpsdimageresources.cpp  qpsdimageresources.h  qpsdlayerandmaskinformation.cpp  qpsdlayerandmaskinformation.h  qpsdlayerblendingrangesdata.cpp  qpsdlayerblendingrangesdata.h  qpsdlayerinfo.cpp  (+31 more)
src/psdexporter/: qpsdexporterplugin.cpp  qpsdexporterplugin.h  qpsdexportertreeitemmodel.cpp  qpsdexportertreeitemmodel.h  qpsdimagestore.cpp
src/psdgui/: CMakeLists.txt  qpsdabstractlayeritem.cpp  qpsdabstractlayeritem.h  qpsdadjustmentlayeritem.cpp  qpsdadjustmentlayeritem.h  qpsdexportertreeitemmodel.cpp  qpsdexportertreeitemmodel.h  qpsdfolderlayeritem.cpp  qpsdfolderlayeritem.h  qpsdfontmapper.cpp  qpsdfontmapper.h  qpsdguiglobal.cpp  qpsdguiglobal.h  qpsdguilayertreeitemmodel.cpp  qpsdguilayertreeitemmodel.h  qpsdlayertree.cpp  qpsdpatternfill.cpp  qpsdshapelayeritem.cpp  qpsdshapelayeritem.h  qpsdtextlayeritem.cpp  qpsdtextlayeritem.h
src/psdimporter/: CMakeLists.txt  qpsdimporterglobal.h  qpsdimporterplugin.cpp  qpsdimporterplugin.h
src/psdwidget/: CMakeLists.txt  qpsdabstractitem.cpp  qpsdabstractitem.h  qpsdblur_p.h  qpsdcustomblend_p.h  qpsdfolderitem.cpp  qpsdfolderitem.h  qpsdfontmappingdialog.cpp  qpsdfontmappingdialog.h  qpsdimageitem.cpp  qpsdimageitem.h  qpsdscene.cpp  qpsdscene.h  qpsdshapeitem.cpp  qpsdshapeitem.h  qpsdtextitem.cpp  qpsdtextitem.h  qpsdview.cpp  qpsdview.h
src/psdwriter/: CMakeLists.txt  configure.cmake  qpsdwriter.cpp  qpsdwriter.h  qpsdwriterglobal.h
tests/auto/psdcore/: CMakeLists.txt
tools/lvgl_capture/: CMakeLists.txt  lv_conf.h  main.c
(+1873 files in other folders)
